model: Tests forecasting models to predict revenue
* ARIMA and exponential smoothing (ETS) methods tested for forecasting a log transformed
or a natural monthly revenue variable
* Model testing and tuning written in R markdown file
* EDA script changed to export data to the modeling script

--- a/scripts/ExploratoryDataAnalysis.Rmd
+++ b/scripts/ExploratoryDataAnalysis.Rmd
@@ -74,7 +74,6 @@ daily.revenue.listings <- tidy.daily.revenue %>%
          listing=as.factor(listing))
 
 daily.revenue.listings
-write_csv(daily.revenue.listings, paste0(cwd, "/../data/output/agreggated_data.csv"))
 ```
 
 # Exploratory Data Analysis
@@ -207,5 +206,10 @@ model.no.hotel <- xgboost(data=no.hotel.matrix,
                        max.depth=6)
 
 xgb.plot.importance(xgb.importance(model=model.no.hotel))
+```
+# Export data to next step
+```{r next_step}
+write_csv(daily.revenue.listings,
+          paste0(cwd, "/../data/output/daily_revenue_listings.csv"))
 ```
 
